@@ -113,6 +113,13 @@ stream.
 The information for each single packet is printed within a dedicated
 section with name "PACKET".
 
+@item -show_frames
+Show information about each video frame contained in the input multimedia
+stream.
+
+The information for each single frame is printed within a dedicated
+section with name "FRAME".
+
 @item -show_streams
 Show information about each media stream contained in the input
 multimedia stream.
